--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pNvIapHxG0kAX8Wmcji&oh=167d8a12f17041a8c1d06af87ea6bf79&oe=5E891096" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pNvIapHxG0kAX9NsmJo&oh=88bcbe768c2d9c1d9341b044d09ebd82&oe=5E891096" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -142,17 +142,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>22</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=FkEH0zTQrAgAX_CtIvY&oh=df575423641ec3ee8e3ca1e3c3398798&oe=5E89278A" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
-								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=qsdJ8pMKGOQAX_58RwC&oh=0687bdd3527d7c1cae2e8d88a1e7b0bb&oe=5E883448" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=g0d1hW89LKkAX-2Bai3&oh=586a53e1e0419733c48cf3a89d2d9866&oe=5E89278A" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -162,17 +152,27 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=QLxQi08pXasAX8wwfqh&oh=4347ac436d770d61679853a23d5a4ee1&oe=5E88399C" alt="РВШИ 2ой взвод">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=QLxQi08pXasAX-f-1ga&oh=2376a9fbcbe280d6b72cf748e8303915&oe=5E88399C" alt="РВШИ 2ой взвод">
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
+								</a>
+								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=NaLkVLOrge0AX-K-6Lo&oh=1fd17578e020a1bc35b79d82bd53ebe4&oe=5E883448" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
 								</a>
 								<a href="./posts/./kukhni.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=D5Q8QEETODkAX8dfzX8&oh=5226fde12f23941e284664b1ebddc925&oe=5E8B37B5" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=RQ7OijQAJGYAX95ojbV&oh=b650028dc361e1bbd24c1830af033386&oe=5E9866B5" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
@@ -182,7 +182,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=R1m9xnzcFKQAX_26AvU&oh=71c098912c67ff01f837a57c3d0d6519&oe=5E81A357" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=R1m9xnzcFKQAX_kTgL6&oh=716985c1fd51a904dccc108919073824&oe=5E8ED257" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -192,7 +192,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=7kCviHXz_uUAX_s_bOs&oh=4ef3b384e2c2967118e2f1861a5f91f2&oe=5E81FA4B" alt="Магазин женской одежды">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=7kCviHXz_uUAX9QpsEg&oh=378098c000ddcfc003ebda6b30475462&oe=5E8F294B" alt="Магазин женской одежды">
 									</div>
 									<div class="article-more__item-name" style="
 ">Магазин женской одежды</div>
@@ -202,17 +202,17 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=eZ33WC5QGm0AX_uK6uk&oh=448fdd1ef9bfb8b4ed99db9472228172&oe=5E99FBB2" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=eZ33WC5QGm0AX_qk_Zf&oh=14c754aa78f44a990f18b2cbcb8ae514&oe=5E99FBB2" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
+								<a href="./posts/./B9HG5z2HH5t.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>11</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=HiMX4qsLgOwAX8WL59o&oh=c14900612a7e9e0125c51374a3bfd7a1&oe=5E83CEDE" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=lRY3ryPkCagAX9v4bGs&oh=20b90f2ffb47658c2e835ac55d8d10d2&oe=5E883CA0" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
