--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=08yfhvK_KY8AX9bSsD8&oh=ddfa7de43dd30b54fc9d16a17562cdaa&oe=5EA36E96" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=08yfhvK_KY8AX9bSsD8&oh=529e2ff69e05b996493a72e7eaebce18&oe=5E9F97EA" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -142,20 +142,10 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>22</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=wDHrR1nGMSAAX_Tin7d&oh=e74e735b3bd08db1044eabb998a77555&oe=5EA3858A" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=wDHrR1nGMSAAX_Tin7d&oh=02dd33d60722662ee5d02a585162a113&oe=5EA0D276" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
-								</a>
-								<a href="./posts/./rvshi-2oy-vzvod.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=M1NjBKtBidkAX-dh4cy&oh=4c8d5d80ddcd6524287aa0dbf3dff33a&oe=5E9F1D64" alt="РВШИ 2ой взвод">
-									</div>
-									<div class="article-more__item-name" style="
-">РВШИ 2ой взвод</div>
 								</a>
 								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -167,12 +157,22 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
+								<a href="./posts/./rvshi-2oy-vzvod.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=zfRsTBJUjzMAX8fNba1&oh=a9e0995bcbea01da51244ef2000ceb51&oe=5E9F1D64" alt="РВШИ 2ой взвод">
+									</div>
+									<div class="article-more__item-name" style="
+">РВШИ 2ой взвод</div>
+								</a>
 								<a href="./posts/./B9HG5z2HH5t.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>15</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=3RK2Cbk8RM0AX9GDWvJ&oh=f7706f6ab6854d1ace30fb6d8b0b44cf&oe=5EA29AA0" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=WcJdlHc0oooAX9FHat_&oh=284144fa02ebac654d5acff87ea4d361&oe=5E9F1A60" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -182,7 +182,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=MjDB_rSufUIAX-_u1ZH&oh=a2578f3fea55a73f3acf5fe61180e1de&oe=5EA595B5" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=MjDB_rSufUIAX-_u1ZH&oh=e584af2959e3c3207956373a52fac8f7&oe=5EB2C4B5" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
@@ -192,27 +192,27 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=AO4Iy8hmEIkAX8ZW8bK&oh=2acd5568112eae03100ca9a286533a8a&oe=5E9C584B" alt="Магазин женской одежды">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=AO4Iy8hmEIkAX8ZW8bK&oh=8f28ef01d46057a2ad624911d1be78f8&oe=5EA9874B" alt="Магазин женской одежды">
 									</div>
 									<div class="article-more__item-name" style="
 ">Магазин женской одежды</div>
-								</a>
-								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=obAVrvSg9s8AX8IHvoa&oh=041d1af3fdea0dbcda545f8517744e65&oe=5E9C0157" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
 								</a>
 								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=b94c810j6K8AX_-Lltt&oh=03b373983bd016eea9a0268e04fb46ea&oe=5E9CF0A2" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=b94c810j6K8AX_-Lltt&oh=0a23192d699370ff06e523ebe068475e&oe=5EA0E522" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
+								</a>
+								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=FBgmhsZnY-wAX_nndRE&oh=27164bd93dce6cbb08033c4c32b4ad9d&oe=5EB459B2" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
